# simple-_kye-value_pair_storage

./: .gitignore  CMakeLists.txt  README.md  key_value.txt  main  main.cpp  readme.md  test.cpp
